--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -260,11 +260,11 @@
     },
     "game": {
       "title": "Spielen Sie das SHAP10R-Spiel",
-      "description": "Shap10r kombiniert Wordle™- und Mastermind®-Mechaniken. Ordnen Sie fünf Shaplors den richtigen Werten zu.",
+      "description": "Shapr10r kombiniert Wordle™- und Mastermind®-Mechaniken. Ordnen Sie fünf Shaplors den richtigen Werten zu.",
       "score": "Punktzahl",
       "highScore": "HOCH",
       "time": "Zeit",
-      "bestTime": "AM BESTEN",
+      "bestTime": "Am besten",
       "hideTimer": "Timer ausblenden",
       "showTimer": "Timer anzeigen",
       "delete": "Löschen",
@@ -276,7 +276,70 @@
       "newGame": "Erneut spielen",
       "hardMode": "Hard-Modus",
       "normalMode": "Normaler Modus",
-      "tryMode": "Versuchen Sie den {mode}-Modus"
+      "tryMode": "Versuchen Sie den {mode}-Modus",
+      "startTimer": "Timer starten",
+      "stopTimer": "Stoppuhr",
+      "resetTimer": "Timer zurücksetzen",
+      "help": "Hilfe",
+      "close": "Schließen",
+      "gameDescription": "Spielbeschreibung",
+      "gameDesc": "Shapr10r ist ein Puzzlespiel, bei dem Sie Formen und Farben kombinieren müssen, um bestimmte Zahlen zu bilden. Jede Form- und Farbkombination hat einen einzigartigen Wert, der auf einfacher Mathematik basiert.",
+      "objective": "Spielziel",
+      "objectiveDesc": "Ihr Ziel ist es, Kombinationen aus Formen und Farben zu finden, die zusammen die in jeder Reihe angezeigten Zielzahlen ergeben. Jede Form hat einen Wert zwischen 10 und 100 (in Vielfachen von 10) und jede Farbe addiert 1 bis 8 zum Wert dieser Form.",
+      "basicRules": "Spielregeln",
+      "rule1": "Jede Form hat einen Grundwert (10-100 in 10er-Schritten)",
+      "rule2": "Jede Farbe fügt dem Basiswert der Form einen eindeutigen Wert (1-8) hinzu",
+      "rule3": "Die endgültige Zahl für jede Position ist die Summe ihres Formwertes und Farbwertes",
+      "rule4": "Verschiedene Kombinationen können die gleiche Endzahl ergeben",
+      "howToPlay": "Spielanleitung",
+      "step1": "Sehen Sie sich die Zielnummer für Ihre aktuelle Zeile an",
+      "step2": "Wählen Sie eine Form (Basiswert: 10-100) und Farbe (addiert 1-8)",
+      "step3": "Versuchen Sie, die Zielzahl mit Ihrer Form-Farb-Kombination abzugleichen",
+      "step4": "Passen Sie Ihre nächste Vermutung anhand des Feedbacks an",
+      "controls": "Spielsteuerung",
+      "controlsDesc1": "Linksklick: Eine Form platzieren",
+      "controlsDesc2": "Rechtsklick: Eine Form entfernen",
+      "controlsDesc3": "Leertaste: Neues Spiel starten",
+      "scoring": "Punktesystem",
+      "scoringDesc": "Punkte werden basierend auf der Geschwindigkeit der Fertigstellung, der Anzahl der verwendeten Züge und der Genauigkeit der Platzierungen vergeben.",
+      "tips": "Profi-Tipps",
+      "tip1": "Beginnen Sie mit Positionen, bei denen Sie sich hinsichtlich des Musters am sichersten sind",
+      "tip2": "Achten Sie sowohl auf Form- als auch auf Farbfeedback",
+      "tip3": "Verwenden Sie das Ausschlussverfahren, um die Möglichkeiten einzugrenzen",
+      "tip4": "Üben Sie das Erkennen gängiger Muster, um Ihre Geschwindigkeit zu verbessern",
+      "variations": "Spielvarianten",
+      "variationsDesc": "Probieren Sie verschiedene Modi aus: Klassisch (Einzelbrett), Doppelt (Zwei Bretter gleichzeitig), Okto (Acht Bretter für die ultimative Herausforderung)",
+      "gameModes": "Spielmodi",
+      "normalModeDesc": "In jeder Reihe sind die 5 Zielzahlen in der Reihenfolge von der kleinsten zur größten angeordnet, sodass es einfacher ist, die richtigen Form- und Farbkombinationen ihren Positionen zuzuordnen.",
+      "hardModeDesc": "Die 5 Zielzahlen in jeder Reihe erscheinen in zufälliger Reihenfolge - Sie müssen herausfinden, welche Form- und Farbkombination an welche Position gehört, ohne die Hilfe der numerischen Reihenfolge",
+      "modesTip": "In beiden Modi müssen Sie Form- und Farbkombinationen erstellen, die den Zielzahlen entsprechen. Der normale Modus hilft Ihnen beim Lernen, indem er Zahlen in der richtigen Reihenfolge anzeigt, während der schwere Modus Ihre Beherrschung der Spielmechanik testet.",
+      "categories": {
+        "classic": "Classic Serie",
+        "advanced": "Erweiterte Serie",
+        "expert": "Expert-Serie"
+      },
+      "features": {
+        "multiplayer": "Mehrspieler",
+        "achievements": "Erfolge",
+        "leaderboards": "Bestenlisten",
+        "customization": "Anpassung"
+      },
+      "errors": {
+        "loadFailed": "Spiel konnte nicht geladen werden",
+        "saveFailed": "Der Fortschritt konnte nicht gespeichert werden",
+        "connectionLost": "Verbindung verloren",
+        "loading": "Laden...",
+        "waitforloading": "Warten Sie eine Minute …",
+        "gameNotFound": "Spiel nicht gefunden",
+        "gameNotFoundDesc": "Leider konnten wir das gesuchte Spiel nicht finden."
+      },
+      "buttons": {
+        "play": "jetzt spielen",
+        "retry": "Versuchen Sie es erneut",
+        "settings": "Einstellungen",
+        "share": "Aktie",
+        "fullscreen": "Vollbild"
+      }
     },
     "categories": {
       "classic": "Classic Serie",
