--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -260,11 +260,11 @@
     },
     "game": {
       "title": "Jugar al JUEGO SHAP10R",
-      "description": "Shap10r combina las mecánicas de Wordle™ y Mastermind®. Empareja cinco Shaplors con los valores correctos.",
+      "description": "Shapr10r combina las mecánicas de Wordle™ y Mastermind®. Empareja cinco Shaplors con los valores correctos.",
       "score": "Puntaje",
       "highScore": "ALTO",
       "time": "Tiempo",
-      "bestTime": "MEJOR",
+      "bestTime": "Mejor",
       "hideTimer": "Ocultar temporizador",
       "showTimer": "Mostrar temporizador",
       "delete": "Eliminar",
@@ -276,7 +276,70 @@
       "newGame": "Jugar de nuevo",
       "hardMode": "Modo difícil",
       "normalMode": "Modo normal",
-      "tryMode": "Pruebe el modo {mode}"
+      "tryMode": "Pruebe el modo {mode}",
+      "startTimer": "Temporizador de inicio",
+      "stopTimer": "Detener el temporizador",
+      "resetTimer": "Temporizador de reinicio",
+      "help": "Ayuda",
+      "close": "Cerrar",
+      "gameDescription": "Descripción del juego",
+      "gameDesc": "Shapr10r es un juego de rompecabezas en el que debes combinar formas y colores para crear números específicos. Cada combinación de forma y color tiene un valor único basado en matemáticas simples.",
+      "objective": "Objetivo del juego",
+      "objectiveDesc": "Tu objetivo es encontrar combinaciones de formas y colores que sumen los números objetivo que se muestran en cada fila. Cada forma tiene un valor de 10 a 100 (en múltiplos de 10) y cada color suma de 1 a 8 al valor de esa forma.",
+      "basicRules": "Reglas del juego",
+      "rule1": "Cada forma tiene un valor base (10-100 en pasos de 10)",
+      "rule2": "Cada color agrega un valor único (1-8) al valor base de la forma.",
+      "rule3": "El número final para cada posición es la suma de su valor de forma y su valor de color.",
+      "rule4": "Diferentes combinaciones pueden crear el mismo número final",
+      "howToPlay": "Cómo jugar",
+      "step1": "Mire el número objetivo para su fila actual",
+      "step2": "Elija una forma (valor base: 10-100) y un color (suma 1-8)",
+      "step3": "Intenta hacer coincidir el número objetivo con tu combinación de forma y color.",
+      "step4": "Utilice los comentarios para ajustar su próxima suposición",
+      "controls": "Controles del juego",
+      "controlsDesc1": "Clic izquierdo: colocar una forma",
+      "controlsDesc2": "Clic derecho: Eliminar una forma",
+      "controlsDesc3": "Barra espaciadora: Iniciar un nuevo juego",
+      "scoring": "Sistema de puntuación",
+      "scoringDesc": "Los puntos se otorgan en función de la velocidad de finalización, la cantidad de movimientos utilizados y la precisión de las colocaciones.",
+      "tips": "Consejos profesionales",
+      "tip1": "Comience con posiciones en las que tenga más confianza en el patrón.",
+      "tip2": "Preste atención tanto a la forma como al color.",
+      "tip3": "Utilice el proceso de eliminación para reducir las posibilidades.",
+      "tip4": "Practica el reconocimiento de patrones comunes para mejorar tu velocidad",
+      "variations": "Variaciones del juego",
+      "variationsDesc": "Prueba diferentes modos: Clásico (un solo tablero), Doble (dos tableros simultáneamente), Octo (ocho tableros para el máximo desafío)",
+      "gameModes": "Modos de juego",
+      "normalModeDesc": "En cada fila, los 5 números objetivo están ordenados del más pequeño al más grande, lo que hace que sea más fácil hacer coincidir las combinaciones correctas de formas y colores con sus posiciones.",
+      "hardModeDesc": "Los 5 números objetivo en cada fila aparecen en orden aleatorio: deberás averiguar qué combinación de forma y color pertenece a qué posición sin la ayuda del orden numérico.",
+      "modesTip": "En ambos modos, debes crear combinaciones de formas y colores que coincidan con los números objetivo. El modo normal te ayuda a aprender mostrando los números en orden, mientras que el modo difícil pone a prueba tu dominio de la mecánica del juego.",
+      "categories": {
+        "classic": "Serie Clásica",
+        "advanced": "Serie avanzada",
+        "expert": "Serie de expertos"
+      },
+      "features": {
+        "multiplayer": "Multijugador",
+        "achievements": "Logros",
+        "leaderboards": "Tablas de clasificación",
+        "customization": "Personalización"
+      },
+      "errors": {
+        "loadFailed": "No se pudo cargar el juego",
+        "saveFailed": "No se pudo guardar el progreso",
+        "connectionLost": "Conexión perdida",
+        "loading": "Cargando...",
+        "waitforloading": "Espera un minuto...",
+        "gameNotFound": "Juego no encontrado",
+        "gameNotFoundDesc": "Lo sentimos, no pudimos encontrar el juego que estás buscando."
+      },
+      "buttons": {
+        "play": "Jugar ahora",
+        "retry": "Intentar otra vez",
+        "settings": "Configuración",
+        "share": "Compartir",
+        "fullscreen": "Pantalla completa"
+      }
     },
     "categories": {
       "classic": "Serie Clásica",
