--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -260,11 +260,11 @@
     },
     "game": {
       "title": "Jouer au jeu SHAP10R",
-      "description": "Shap10r combine les mécanismes Wordle™ et Mastermind®. Associez cinq Shaplors avec les valeurs correctes.",
+      "description": "Shapr10r combine les mécanismes de Wordle™ et Mastermind®. Associez cinq Shaplors aux valeurs correctes.",
       "score": "Score",
       "highScore": "HAUT",
       "time": "Temps",
-      "bestTime": "MEILLEUR",
+      "bestTime": "Meilleur",
       "hideTimer": "Masquer la minuterie",
       "showTimer": "Afficher la minuterie",
       "delete": "Supprimer",
@@ -276,7 +276,70 @@
       "newGame": "Jouer à nouveau",
       "hardMode": "Mode difficile",
       "normalMode": "Mode normal",
-      "tryMode": "Essayez le mode {mode}"
+      "tryMode": "Essayez le mode {mode}",
+      "startTimer": "Démarrer la minuterie",
+      "stopTimer": "Arrêter la minuterie",
+      "resetTimer": "Réinitialiser la minuterie",
+      "help": "Aide",
+      "close": "Fermer",
+      "gameDescription": "Description du jeu",
+      "gameDesc": "Shapr10r est un jeu de réflexion dans lequel vous devez associer des formes et des couleurs pour créer des nombres spécifiques. Chaque combinaison de formes et de couleurs possède une valeur unique basée sur des mathématiques simples.",
+      "objective": "Objectif du jeu",
+      "objectiveDesc": "Votre objectif est de trouver des combinaisons de formes et de couleurs qui correspondent aux nombres cibles indiqués sur chaque ligne. Chaque forme a une valeur comprise entre 10 et 100 (en multiples de 10) et chaque couleur ajoute 1 à 8 à la valeur de cette forme.",
+      "basicRules": "Règles du jeu",
+      "rule1": "Chaque forme a une valeur de base (10-100 par pas de 10)",
+      "rule2": "Chaque couleur ajoute une valeur unique (1-8) à la valeur de base de la forme",
+      "rule3": "Le nombre final pour chaque position est la somme de sa valeur de forme et de sa valeur de couleur",
+      "rule4": "Différentes combinaisons peuvent créer le même nombre final",
+      "howToPlay": "Comment jouer",
+      "step1": "Regardez le numéro cible pour votre ligne actuelle",
+      "step2": "Choisissez une forme (valeur de base : 10-100) et une couleur (ajoute 1 à 8)",
+      "step3": "Essayez de faire correspondre le nombre cible avec votre combinaison forme-couleur",
+      "step4": "Utilisez les commentaires pour ajuster votre prochaine estimation",
+      "controls": "Commandes de jeu",
+      "controlsDesc1": "Clic gauche : Placer une forme",
+      "controlsDesc2": "Clic droit : Supprimer une forme",
+      "controlsDesc3": "Barre d'espace : démarrer une nouvelle partie",
+      "scoring": "Système de notation",
+      "scoringDesc": "Les points sont attribués en fonction de la vitesse d'exécution, du nombre de mouvements utilisés et de la précision des placements.",
+      "tips": "Conseils de pro",
+      "tip1": "Commencez par les positions dans lesquelles vous êtes le plus sûr du modèle",
+      "tip2": "Faites attention aux commentaires sur la forme et la couleur",
+      "tip3": "Utiliser le processus d’élimination pour réduire les possibilités",
+      "tip4": "Entraînez-vous à reconnaître des modèles courants pour améliorer votre vitesse",
+      "variations": "Variantes de jeu",
+      "variationsDesc": "Essayez différents modes : Classique (une seule planche), Double (deux planches simultanément), Octo (huit planches pour un défi ultime)",
+      "gameModes": "Modes de jeu",
+      "normalModeDesc": "Dans chaque rangée, les 5 numéros cibles sont disposés du plus petit au plus grand, ce qui facilite la correspondance des combinaisons de formes et de couleurs correctes avec leurs positions",
+      "hardModeDesc": "Les 5 numéros cibles de chaque ligne apparaissent dans un ordre aléatoire - vous devrez déterminer quelle forme et quelle combinaison de couleurs appartiennent à quelle position sans l'aide de l'ordre numérique",
+      "modesTip": "Dans les deux modes, vous devez créer des combinaisons de formes et de couleurs qui correspondent aux nombres cibles. Le mode normal vous aide à apprendre en affichant les nombres dans l'ordre, tandis que le mode difficile teste votre maîtrise des mécanismes du jeu.",
+      "categories": {
+        "classic": "Série Classique",
+        "advanced": "Série avancée",
+        "expert": "Série d'experts"
+      },
+      "features": {
+        "multiplayer": "Multijoueur",
+        "achievements": "Réalisations",
+        "leaderboards": "Classements",
+        "customization": "Personnalisation"
+      },
+      "errors": {
+        "loadFailed": "Impossible de charger le jeu",
+        "saveFailed": "Impossible de sauvegarder la progression",
+        "connectionLost": "Connexion perdue",
+        "loading": "Chargement...",
+        "waitforloading": "Attends une minute...",
+        "gameNotFound": "Jeu non trouvé",
+        "gameNotFoundDesc": "Désolé, nous n'avons pas pu trouver le jeu que vous recherchez."
+      },
+      "buttons": {
+        "play": "Jouer maintenant",
+        "retry": "Essayer à nouveau",
+        "settings": "Paramètres",
+        "share": "Partager",
+        "fullscreen": "Plein écran"
+      }
     },
     "categories": {
       "classic": "Série Classique",
