--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -260,11 +260,11 @@
     },
     "game": {
       "title": "Gioca al GIOCO SHAP10R",
-      "description": "Shap10r combina le meccaniche Wordle™ e Mastermind®. Abbina cinque Shaplor con i valori corretti.",
+      "description": "Shapr10r combina le meccaniche Wordle™ e Mastermind®. Abbina cinque Shaplor con i valori corretti.",
       "score": "Punto",
       "highScore": "ALTO",
       "time": "Tempo",
-      "bestTime": "MIGLIORE",
+      "bestTime": "Migliore",
       "hideTimer": "Nascondi timer",
       "showTimer": "Mostra timer",
       "delete": "Elimina",
@@ -276,7 +276,70 @@
       "newGame": "Gioca di nuovo",
       "hardMode": "Modalità difficile",
       "normalMode": "Modalità normale",
-      "tryMode": "Prova la modalità {mode}"
+      "tryMode": "Prova la modalità {mode}",
+      "startTimer": "Avvia timer",
+      "stopTimer": "Arresta il timer",
+      "resetTimer": "Ripristina timer",
+      "help": "Aiuto",
+      "close": "Chiudi",
+      "gameDescription": "Descrizione del gioco",
+      "gameDesc": "Shapr10r è un gioco rompicapo in cui devi abbinare forme e colori per creare numeri specifici. Ogni combinazione di forma e colore ha un valore univoco basato su una semplice matematica.",
+      "objective": "Obiettivo del gioco",
+      "objectiveDesc": "Il tuo obiettivo è trovare combinazioni di forme e colori che sommati diano i numeri target mostrati su ogni riga. Ogni forma ha un valore da 10 a 100 (in multipli di 10) e ogni colore aggiunge da 1 a 8 al valore di quella forma.",
+      "basicRules": "Regole del gioco",
+      "rule1": "Ogni forma ha un valore di base (10-100 in incrementi di 10)",
+      "rule2": "Ogni colore aggiunge un valore univoco (1-8) al valore di base della forma",
+      "rule3": "Il numero finale per ogni posizione è la somma del valore della forma e del valore del colore",
+      "rule4": "Diverse combinazioni possono creare lo stesso numero finale",
+      "howToPlay": "Come si gioca",
+      "step1": "Guarda il numero di destinazione per la tua riga corrente",
+      "step2": "Scegli una forma (valore base: 10-100) e un colore (aggiunge 1-8)",
+      "step3": "Prova ad abbinare il numero bersaglio alla combinazione forma-colore",
+      "step4": "Utilizza il feedback per modificare la tua prossima ipotesi",
+      "controls": "Controlli di gioco",
+      "controlsDesc1": "Clic sinistro: posiziona una forma",
+      "controlsDesc2": "Clic destro: rimuovi una forma",
+      "controlsDesc3": "Barra spaziatrice: inizia una nuova partita",
+      "scoring": "Sistema di punteggio",
+      "scoringDesc": "I punti vengono assegnati in base alla velocità di completamento, al numero di mosse utilizzate e alla precisione dei posizionamenti",
+      "tips": "Suggerimenti Pro",
+      "tip1": "Inizia con le posizioni in cui ti senti più sicuro del modello",
+      "tip2": "Prestare attenzione sia al feedback della forma che a quello del colore",
+      "tip3": "Utilizzare il processo di eliminazione per restringere le possibilità",
+      "tip4": "Esercitati a riconoscere schemi comuni per migliorare la tua velocità",
+      "variations": "Varianti del gioco",
+      "variationsDesc": "Prova diverse modalità: Classica (Singola tavola), Doppia (Due tavole contemporaneamente), Octo (Otto tavole per la sfida definitiva)",
+      "gameModes": "Modalità di gioco",
+      "normalModeDesc": "In ogni riga, i 5 numeri bersaglio sono disposti dal più piccolo al più grande, rendendo più facile abbinare la forma corretta e le combinazioni di colori alle loro posizioni",
+      "hardModeDesc": "I 5 numeri bersaglio in ogni riga appaiono in ordine casuale: dovrai capire quale combinazione di forma e colore appartiene a quale posizione senza l'aiuto dell'ordine numerico",
+      "modesTip": "In entrambe le modalità, devi creare combinazioni di forme e colori che corrispondano ai numeri target. La modalità Normale ti aiuta a imparare mostrando i numeri in ordine, mentre la modalità Difficile mette alla prova la tua padronanza delle meccaniche di gioco",
+      "categories": {
+        "classic": "Serie classica",
+        "advanced": "Serie avanzata",
+        "expert": "Serie Esperti"
+      },
+      "features": {
+        "multiplayer": "Multigiocatore",
+        "achievements": "Risultati",
+        "leaderboards": "Classifiche",
+        "customization": "Personalizzazione"
+      },
+      "errors": {
+        "loadFailed": "Impossibile caricare il gioco",
+        "saveFailed": "Impossibile salvare i progressi",
+        "connectionLost": "Connessione persa",
+        "loading": "Caricamento...",
+        "waitforloading": "Aspetta un attimo...",
+        "gameNotFound": "Gioco non trovato",
+        "gameNotFoundDesc": "Spiacenti, non siamo riusciti a trovare il gioco che stai cercando."
+      },
+      "buttons": {
+        "play": "Gioca ora",
+        "retry": "Riprova",
+        "settings": "Impostazioni",
+        "share": "Condividere",
+        "fullscreen": "A schermo intero"
+      }
     },
     "categories": {
       "classic": "Serie classica",
