--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -260,7 +260,7 @@
     },
     "game": {
       "title": "SHAP10Rゲームをプレイ",
-      "description": "Shap10r は Wordle™ と Mastermind® の仕組みを組み合わせたものです。正しい値を持つ 5 つの Shaplors を一致させます。",
+      "description": "Shapr10r は Wordle™ と Mastermind® の仕組みを組み合わせたものです。正しい値を持つ 5 つの Shaplors を一致させます。",
       "score": "スコア",
       "highScore": "高い",
       "time": "時間",
@@ -276,7 +276,70 @@
       "newGame": "もう一度プレイ",
       "hardMode": "ハードモード",
       "normalMode": "通常モード",
-      "tryMode": "{mode} モードを試す"
+      "tryMode": "{mode} モードを試す",
+      "startTimer": "タイマーを開始",
+      "stopTimer": "タイマーを停止",
+      "resetTimer": "タイマーをリセット",
+      "help": "ヘルプ",
+      "close": "閉じる",
+      "gameDescription": "ゲームの説明",
+      "gameDesc": "Shapr10r は、形と色を一致させて特定の数字を作成するパズル ゲームです。各形と色の組み合わせには、簡単な計算に基づいた固有の値があります。",
+      "objective": "ゲームの目的",
+      "objectiveDesc": "あなたの目標は、各行に表示されている目標数値に達する形と色の組み合わせを見つけることです。各形の値は 10 から 100 (10 の倍数) で、各色はその形の値に 1 から 8 を加算します。",
+      "basicRules": "ゲームのルール",
+      "rule1": "各形状には基本値（10～100、10刻み）があります。",
+      "rule2": "各色は、図形の基本値に固有の値（1～8）を追加します。",
+      "rule3": "各位置の最終的な数値は、その形状値と色値の合計です。",
+      "rule4": "異なる組み合わせで同じ最終数字が作成される場合がある",
+      "howToPlay": "遊び方",
+      "step1": "現在の行の目標数を確認します",
+      "step2": "形状（基本値：10〜100）と色（1〜8を追加）を選択します",
+      "step3": "目標の数字を形と色の組み合わせに合わせてみましょう",
+      "step4": "フィードバックを利用して次の推測を調整します",
+      "controls": "ゲームコントロール",
+      "controlsDesc1": "左クリック: 図形を配置",
+      "controlsDesc2": "右クリック: 図形を削除",
+      "controlsDesc3": "スペースキー: 新しいゲームを開始",
+      "scoring": "スコアリングシステム",
+      "scoringDesc": "ポイントは、完了のスピード、使用した移動回数、配置の正確さに基づいて付与されます。",
+      "tips": "プロのヒント",
+      "tip1": "パターンに最も自信があるポジションから始めましょう",
+      "tip2": "形と色のフィードバックの両方に注意を払う",
+      "tip3": "消去法を使って可能性を絞り込む",
+      "tip4": "一般的なパターンを認識してスピードを向上させる練習をしましょう",
+      "variations": "ゲームのバリエーション",
+      "variationsDesc": "さまざまなモードをお試しください: クラシック (シングルボード)、ダブル (2 つのボードを同時に)、オクト (究極のチャレンジのための 8 つのボード)",
+      "gameModes": "ゲームモード",
+      "normalModeDesc": "各行には、5つの目標数字が小さいものから大きいものの順に並べられており、正しい形と色の組み合わせをその位置に合わせやすくなります。",
+      "hardModeDesc": "各行の5つのターゲット番号はランダムな順序で表示されます。数字の順序に頼らずに、どの形と色の組み合わせがどの位置に属するかを判断する必要があります。",
+      "modesTip": "どちらのモードでも、目標の数字に一致する形と色の組み合わせを作成する必要があります。通常モードでは、数字を順番に表示して学習し、ハードモードではゲームの仕組みの習熟度をテストします。",
+      "categories": {
+        "classic": "クラシックシリーズ",
+        "advanced": "上級シリーズ",
+        "expert": "エキスパートシリーズ"
+      },
+      "features": {
+        "multiplayer": "マルチプレイヤー",
+        "achievements": "実績",
+        "leaderboards": "リーダーボード",
+        "customization": "カスタマイズ"
+      },
+      "errors": {
+        "loadFailed": "ゲームの読み込みに失敗しました",
+        "saveFailed": "進行状況を保存できませんでした",
+        "connectionLost": "接続が失われました",
+        "loading": "読み込み中...",
+        "waitforloading": "ちょっと待ってください...",
+        "gameNotFound": "ゲームが見つかりません",
+        "gameNotFoundDesc": "申し訳ありませんが、お探しのゲームは見つかりませんでした。"
+      },
+      "buttons": {
+        "play": "今すぐプレイ",
+        "retry": "もう一度やり直してください",
+        "settings": "設定",
+        "share": "共有",
+        "fullscreen": "全画面表示"
+      }
     },
     "categories": {
       "classic": "クラシックシリーズ",
