--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -260,11 +260,11 @@
     },
     "game": {
       "title": "Играть в ИГРУ SHAP10R",
-      "description": "Shap10r сочетает механики Wordle™ и Mastermind®. Сопоставьте пять Shaplors с правильными значениями.",
+      "description": "Shapr10r сочетает механику Wordle™ и Mastermind®. Сопоставьте пять Shaplors с правильными значениями.",
       "score": "Счет",
       "highScore": "ВЫСОКИЙ",
       "time": "Время",
-      "bestTime": "ЛУЧШИЙ",
+      "bestTime": "Лучший",
       "hideTimer": "Скрыть таймер",
       "showTimer": "Показать таймер",
       "delete": "Удалить",
@@ -276,7 +276,70 @@
       "newGame": "Играть снова",
       "hardMode": "Сложный режим",
       "normalMode": "Нормальный режим",
-      "tryMode": "Попробуйте {mode} режим"
+      "tryMode": "Попробуйте {mode} режим",
+      "startTimer": "Запустить таймер",
+      "stopTimer": "Остановить таймер",
+      "resetTimer": "Сброс таймера",
+      "help": "Помощь",
+      "close": "Закрыть",
+      "gameDescription": "Описание игры",
+      "gameDesc": "Shapr10r — это игра-головоломка, в которой вам нужно сопоставлять формы и цвета, чтобы создавать определенные числа. Каждая комбинация формы и цвета имеет уникальное значение, основанное на простой математике.",
+      "objective": "Цель игры",
+      "objectiveDesc": "Ваша цель — найти комбинации форм и цветов, которые в сумме дают целевые числа, показанные в каждой строке. Каждая форма имеет значение от 10 до 100 (кратное 10), а каждый цвет добавляет от 1 до 8 к значению этой формы.",
+      "basicRules": "Правила игры",
+      "rule1": "Каждая фигура имеет базовое значение (от 10 до 100 с шагом 10).",
+      "rule2": "Каждый цвет добавляет уникальное значение (1-8) к базовому значению фигуры.",
+      "rule3": "Окончательное число для каждой позиции представляет собой сумму ее значения формы и значения цвета.",
+      "rule4": "Различные комбинации могут дать одно и то же конечное число.",
+      "howToPlay": "Как играть",
+      "step1": "Посмотрите на целевое число для вашей текущей строки.",
+      "step2": "Выберите форму (базовое значение: 10-100) и цвет (добавляет 1-8)",
+      "step3": "Попробуйте сопоставить целевое число с вашей комбинацией формы и цвета.",
+      "step4": "Используйте обратную связь, чтобы скорректировать свое следующее предположение.",
+      "controls": "Управление игрой",
+      "controlsDesc1": "Левый щелчок: разместить фигуру",
+      "controlsDesc2": "Щелчок правой кнопкой мыши: удалить фигуру",
+      "controlsDesc3": "Пробел: Начать новую игру",
+      "scoring": "Система подсчета очков",
+      "scoringDesc": "Очки начисляются на основе скорости выполнения, количества использованных ходов и точности размещения.",
+      "tips": "Советы профессионалов",
+      "tip1": "Начните с позиций, в которых вы наиболее уверены относительно модели.",
+      "tip2": "Обратите внимание на форму и цвет обратной связи.",
+      "tip3": "Используйте метод исключения, чтобы сузить круг возможных вариантов",
+      "tip4": "Практикуйте распознавание общих закономерностей, чтобы улучшить свою скорость.",
+      "variations": "Варианты игры",
+      "variationsDesc": "Попробуйте разные режимы: Classic (одна доска), Double (две доски одновременно), Octo (восемь досок для максимального испытания)",
+      "gameModes": "Режимы игры",
+      "normalModeDesc": "В каждом ряду 5 целевых чисел расположены от меньшего к большему, что упрощает сопоставление правильных форм и цветовых комбинаций с их позициями.",
+      "hardModeDesc": "5 целевых чисел в каждом ряду появляются в случайном порядке — вам нужно будет выяснить, какая комбинация формы и цвета занимает какое положение, не прибегая к помощи числового порядка.",
+      "modesTip": "В обоих режимах вам нужно создавать комбинации форм и цветов, которые соответствуют целевым числам. Нормальный режим помогает вам учиться, показывая числа по порядку, в то время как Сложный режим проверяет ваше мастерство в игровой механике",
+      "categories": {
+        "classic": "Классическая серия",
+        "advanced": "Продвинутая серия",
+        "expert": "Серия «Эксперт»"
+      },
+      "features": {
+        "multiplayer": "Мультиплеер",
+        "achievements": "Достижения",
+        "leaderboards": "Таблицы лидеров",
+        "customization": "Настройка"
+      },
+      "errors": {
+        "loadFailed": "Не удалось загрузить игру",
+        "saveFailed": "Не удалось сохранить прогресс",
+        "connectionLost": "Соединение потеряно",
+        "loading": "Загрузка...",
+        "waitforloading": "Подождите минутку...",
+        "gameNotFound": "Игра не найдена",
+        "gameNotFoundDesc": "Извините, мы не смогли найти игру, которую вы ищете."
+      },
+      "buttons": {
+        "play": "Играть сейчас",
+        "retry": "Попробуйте еще раз",
+        "settings": "Настройки",
+        "share": "Делиться",
+        "fullscreen": "Полноэкранный"
+      }
     },
     "categories": {
       "classic": "Классическая серия",
