--- a/src/locales/zh-cn.json
+++ b/src/locales/zh-cn.json
@@ -114,6 +114,89 @@
       "settings": "设置",
       "share": "分享",
       "fullscreen": "全屏"
+    },
+    "game": {
+      "title": "玩SHAP10R游戏",
+      "description": "Shapr10r 结合了 Wordle™ 和 Mastermind® 机制。将五个 Shaplor 与正确的值匹配。",
+      "score": "分数",
+      "highScore": "高的",
+      "time": "时间",
+      "bestTime": "最好的",
+      "startTimer": "开始计时器",
+      "stopTimer": "停止计时器",
+      "resetTimer": "重置定时器",
+      "hideTimer": "隐藏计时器",
+      "showTimer": "显示计时器",
+      "delete": "删除",
+      "enter": "进入",
+      "congratulations": "恭喜！",
+      "solvedPuzzle": "您在 {tries} 次尝试后就解答了该谜题！",
+      "finalScore": "最终得分：{score}",
+      "newHighScore": "新高分！",
+      "newGame": "再次播放",
+      "hardMode": "困难模式",
+      "normalMode": "普通模式",
+      "tryMode": "尝试 {mode} 模式",
+      "help": "帮助中心",
+      "close": "关闭",
+      "gameDescription": "游戏描述",
+      "gameDesc": "Shapr10r 是一款益智游戏，您需要匹配形状和颜色来创建特定数字。根据简单的数学知识，每个形状和颜色组合都有一个独特的值。",
+      "objective": "游戏目标",
+      "objectiveDesc": "您的目标是找到形状和颜色的组合，使之和达到每行显示的目标数字。每个形状的值从 10 到 100（10 的倍数），每种颜色将形状的值增加 1 到 8。",
+      "basicRules": "游戏规则",
+      "rule1": "每个形状都有一个基值（10-100，以 10 为步长）",
+      "rule2": "每种颜色都会为形状的基值添加一个唯一值（1-8）",
+      "rule3": "每个位置的最终数字是其形状值和颜色值的总和",
+      "rule4": "不同的组合可以产生相同的最终数字",
+      "howToPlay": "怎么玩",
+      "step1": "查看当前行的目标数字",
+      "step2": "选择形状（基数：10-100）和颜色（加 1-8）",
+      "step3": "尝试将目标数字与形状颜色组合相匹配",
+      "step4": "利用反馈来调整你的下一个猜测",
+      "controls": "游戏控制",
+      "controlsDesc1": "左键单击：放置形状",
+      "controlsDesc2": "右键单击：删除形状",
+      "controlsDesc3": "空格键：开始新游戏",
+      "scoring": "评分系统",
+      "scoringDesc": "根据完成速度、使用的动作数量和放置的准确性授予积分",
+      "tips": "专业提示",
+      "tip1": "从你对模式最有信心的位置开始",
+      "tip2": "注意形状和颜色的反馈",
+      "tip3": "使用排除法来缩小可能性",
+      "tip4": "练习识别常见模式以提高速度",
+      "variations": "游戏变体",
+      "variationsDesc": "尝试不同的模式：经典（单板）、双人（同时使用两块板）、八人（终极挑战使用八块板）",
+      "gameModes": "游戏模式",
+      "normalModeDesc": "每行 5 个目标数字按从小到大的顺序排列，这样更容易将正确的形状和颜色组合与其位置匹配",
+      "hardModeDesc": "每行中的 5 个目标数字以随机顺序出现 - 您需要在没有数字顺序帮助的情况下找出哪种形状和颜色组合属于哪个位置",
+      "modesTip": "在这两种模式下，您都需要创建与目标数字相匹配的形状和颜色组合。普通模式通过按顺序显示数字来帮助您学习，而困难模式则测试您对游戏机制的掌握程度",
+      "categories": {
+        "classic": "经典系列",
+        "advanced": "进阶系列",
+        "expert": "专家系列"
+      },
+      "features": {
+        "multiplayer": "多人游戏",
+        "achievements": "成就",
+        "leaderboards": "排行榜",
+        "customization": "定制"
+      },
+      "errors": {
+        "loadFailed": "游戏加载失败",
+        "saveFailed": "无法保存进度",
+        "connectionLost": "连接丢失",
+        "loading": "加载中...",
+        "waitforloading": "等一下...",
+        "gameNotFound": "未找到游戏",
+        "gameNotFoundDesc": "抱歉，我们找不到您要找的游戏。"
+      },
+      "buttons": {
+        "play": "立即播放",
+        "retry": "再试一次",
+        "settings": "设置",
+        "share": "分享",
+        "fullscreen": "全屏"
+      }
     }
   }
 }
