--- a/src/locales/zh-tw.json
+++ b/src/locales/zh-tw.json
@@ -260,7 +260,7 @@
     },
     "game": {
       "title": "玩SHAP10R遊戲",
-      "description": "Shap10r 結合了 Wordle™ 和 Mastermind® 機制。將五個 Shaplors 與正確的值相符。",
+      "description": "Shapr10r 結合了 Wordle™ 和 Mastermind® 機制。將五個 Shaplors 與正確的值相符。",
       "score": "分數",
       "highScore": "高的",
       "time": "時間",
@@ -276,7 +276,70 @@
       "newGame": "再玩一次",
       "hardMode": "困難模式",
       "normalMode": "普通模式",
-      "tryMode": "嘗試{mode}模式"
+      "tryMode": "嘗試{mode}模式",
+      "startTimer": "啟動定時器",
+      "stopTimer": "停止定時器",
+      "resetTimer": "重置定時器",
+      "help": "幫助中心",
+      "close": "關閉",
+      "gameDescription": "遊戲說明",
+      "gameDesc": "Shapr10r 是一款益智遊戲，您需要匹配形狀和顏色來創建特定的數字。根據簡單的數學計算，每種形狀和顏色組合都有獨特的價值。",
+      "objective": "遊戲目標",
+      "objectiveDesc": "您的目標是找到形狀和顏色組合，使其達到每行顯示的目標數字。每個形狀的值都在 10 到 100 之間（10 的倍數），每種顏色都會在該形狀的值上加 1 到 8。",
+      "basicRules": "遊戲規則",
+      "rule1": "每個形狀都有一個基底值（10-100，步長為 10）",
+      "rule2": "每種顏色都會在形狀的基底值上加上一個唯一值 (1-8)",
+      "rule3": "每個位置的最終數字是其形狀值和顏色值總和",
+      "rule4": "不同的組合可以產生相同的最終數字",
+      "howToPlay": "怎麼玩",
+      "step1": "查看目前行的目標數字",
+      "step2": "選擇形狀（基底值：10-100）和顏色（加 1-8）",
+      "step3": "嘗試將目標數字與您的形狀顏色組合相匹配",
+      "step4": "使用反饋來調整您的下一個猜測",
+      "controls": "遊戲控制",
+      "controlsDesc1": "左鍵點選：放置形狀",
+      "controlsDesc2": "右鍵：刪除形狀",
+      "controlsDesc3": "空白鍵：開始新遊戲",
+      "scoring": "評分系統",
+      "scoringDesc": "根據完成速度、使用的移動次數和放置的準確性來獎勵積分",
+      "tips": "專業提示",
+      "tip1": "從您對模式最有信心的位置開始",
+      "tip2": "注意形狀和顏色回饋",
+      "tip3": "使用排除法來縮小可能性",
+      "tip4": "練習辨識常見模式以提高速度",
+      "variations": "遊戲變化",
+      "variationsDesc": "嘗試不同的模式：經典（單板）、雙板（同時兩板）、Octo（八板終極挑戰）",
+      "gameModes": "遊戲模式",
+      "normalModeDesc": "每行中，5 個目標數字從小到大排列，以便更輕鬆地將正確的形狀和顏色組合與其位置相匹配",
+      "hardModeDesc": "每行中的 5 個目標數字以隨機順序出現 - 您需要在不借助數字順序的情況下找出哪種形狀和顏色組合屬於哪個位置",
+      "modesTip": "在這兩種模式下，您都需要建立與目標數字相符的形狀和顏色組合。普通模式透過依序顯示數字來幫助您學習，而困難模式則測試您對遊戲機制的掌握程度",
+      "categories": {
+        "classic": "經典系列",
+        "advanced": "高級系列",
+        "expert": "專家系列"
+      },
+      "features": {
+        "multiplayer": "多人遊戲",
+        "achievements": "成就",
+        "leaderboards": "排行榜",
+        "customization": "客製化"
+      },
+      "errors": {
+        "loadFailed": "無法載入遊戲",
+        "saveFailed": "保存進度失敗",
+        "connectionLost": "連線遺失",
+        "loading": "載入中...",
+        "waitforloading": "等一下...",
+        "gameNotFound": "找不到遊戲",
+        "gameNotFoundDesc": "抱歉，我們找不到您要找的遊戲。"
+      },
+      "buttons": {
+        "play": "立即播放",
+        "retry": "再試一次",
+        "settings": "設定",
+        "share": "分享",
+        "fullscreen": "全螢幕"
+      }
     },
     "categories": {
       "classic": "經典系列",
