--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -260,7 +260,7 @@
     },
     "game": {
       "title": "SHAP10R 게임 플레이",
-      "description": "Shap10r는 Wordle™과 Mastermind® 메커니즘을 결합합니다. Shaplor 5개를 올바른 값으로 매치합니다.",
+      "description": "Shapr10r는 Wordle™과 Mastermind® 메커니즘을 결합합니다. Shaplor 5개를 올바른 값으로 매치합니다.",
       "score": "점수",
       "highScore": "높은",
       "time": "시간",
@@ -276,7 +276,70 @@
       "newGame": "다시 플레이",
       "hardMode": "하드 모드",
       "normalMode": "일반 모드",
-      "tryMode": "{mode} 모드를 시도해 보세요"
+      "tryMode": "{mode} 모드를 시도해 보세요",
+      "startTimer": "타이머 시작",
+      "stopTimer": "타이머 정지",
+      "resetTimer": "타이머 재설정",
+      "help": "도움말",
+      "close": "닫기",
+      "gameDescription": "게임 설명",
+      "gameDesc": "Shapr10r은 특정 숫자를 만들기 위해 모양과 색상을 맞춰야 하는 퍼즐 게임입니다. 각 모양과 색상 조합은 간단한 수학을 기반으로 고유한 값을 갖습니다.",
+      "objective": "게임 목표",
+      "objectiveDesc": "여러분의 목표는 각 행에 표시된 목표 숫자에 합산되는 모양과 색상 조합을 찾는 것입니다. 각 모양은 10에서 100까지의 값을 가지고 있으며(10의 배수), 각 색상은 해당 모양의 값에 1에서 8까지 더합니다.",
+      "basicRules": "게임 규칙",
+      "rule1": "각 모양에는 기준 값(10단계로 10~100)이 있습니다.",
+      "rule2": "각 색상은 모양의 기본 값에 고유한 값(1-8)을 추가합니다.",
+      "rule3": "각 위치의 최종 숫자는 모양 값과 색상 값의 합입니다.",
+      "rule4": "다양한 조합으로 동일한 최종 숫자를 생성할 수 있습니다.",
+      "howToPlay": "플레이 방법",
+      "step1": "현재 행의 목표 번호를 확인하세요.",
+      "step2": "모양(기본값: 10~100)과 색상(1~8 추가)을 선택하세요",
+      "step3": "목표 숫자와 모양-색상 조합을 맞춰보세요.",
+      "step4": "피드백을 사용하여 다음 추측을 조정하세요",
+      "controls": "게임 컨트롤",
+      "controlsDesc1": "왼쪽 클릭: 모양 배치",
+      "controlsDesc2": "마우스 오른쪽 클릭: 모양 제거",
+      "controlsDesc3": "스페이스바: 새로운 게임 시작",
+      "scoring": "채점 시스템",
+      "scoringDesc": "완료 속도, 사용된 이동 수, 배치 정확도에 따라 포인트가 부여됩니다.",
+      "tips": "프로 팁",
+      "tip1": "패턴에 대해 가장 확신이 있는 위치에서 시작하세요.",
+      "tip2": "모양과 색상 피드백에 모두 주의하세요",
+      "tip3": "제거 과정을 사용하여 가능성을 좁히십시오",
+      "tip4": "속도를 향상시키기 위해 일반적인 패턴을 인식하는 연습을 하세요",
+      "variations": "게임 변형",
+      "variationsDesc": "다양한 모드를 시도해 보세요: 클래식(단일 보드), 더블(동시에 두 개의 보드), 옥토(궁극적인 도전을 위한 여덟 개의 보드)",
+      "gameModes": "게임 모드",
+      "normalModeDesc": "각 행에는 5개의 타겟 숫자가 가장 작은 것부터 큰 것 순으로 배열되어 있어 해당 위치에 맞는 올바른 모양과 색상 조합을 쉽게 찾을 수 있습니다.",
+      "hardModeDesc": "각 행의 5개 대상 숫자는 무작위 순서로 나타납니다. 숫자 순서의 도움 없이 어떤 모양과 색상 조합이 어떤 위치에 속하는지 알아내야 합니다.",
+      "modesTip": "두 모드 모두 목표 숫자와 일치하는 모양과 색상 조합을 만들어야 합니다. 일반 모드는 숫자를 순서대로 표시하여 학습하는 데 도움이 되는 반면, 하드 모드는 게임 메커니즘에 대한 숙달도를 테스트합니다.",
+      "categories": {
+        "classic": "클래식 시리즈",
+        "advanced": "고급 시리즈",
+        "expert": "전문가 시리즈"
+      },
+      "features": {
+        "multiplayer": "멀티플레이어",
+        "achievements": "업적",
+        "leaderboards": "리더보드",
+        "customization": "사용자 정의"
+      },
+      "errors": {
+        "loadFailed": "게임을 불러오는데 실패했습니다",
+        "saveFailed": "진행 상황을 저장하지 못했습니다.",
+        "connectionLost": "연결이 끊어졌습니다",
+        "loading": "로딩중...",
+        "waitforloading": "잠깐만요...",
+        "gameNotFound": "게임을 찾을 수 없습니다",
+        "gameNotFoundDesc": "죄송합니다. 원하시는 게임을 찾을 수 없습니다."
+      },
+      "buttons": {
+        "play": "지금 플레이",
+        "retry": "다시 시도하세요",
+        "settings": "설정",
+        "share": "공유하다",
+        "fullscreen": "전체 화면"
+      }
     },
     "categories": {
       "classic": "클래식 시리즈",
